// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GlobalBanner matches snapshot (desktop, alert) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c6[aria-disabled='true'] {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CD2C23;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: var(--spacing-half) var(--spacing-1halfx) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1x);
}

.c3 {
  display: block;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: unset;
}

.c4 > button {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

.c7 {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c7:hover {
  border-color: rgb(255 255 255 / 0.5);
  color: rgb(255 255 255 / 0.5);
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1_title"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="alert"
      class="c2"
      color="currentColor"
      height="16"
      icon-name="alert-octagon"
      role="img"
      width="16"
    />
    <span>
      <strong
        class="c3"
        id="uuid1_title"
      >
        alert
      </strong>
      Test content
    </span>
  </div>
  <div
    class="c4"
  >
    <button
      class="c5 c6 c7"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (desktop, discovery) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c6[aria-disabled='true'] {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c8:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c8[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #602FA0;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: var(--spacing-half) var(--spacing-1halfx) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1x);
}

.c3 {
  display: block;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: unset;
}

.c4 > button {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

.c7 {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c7:hover {
  border-color: rgb(255 255 255 / 0.5);
  color: rgb(255 255 255 / 0.5);
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1_title"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="discovery"
      class="c2"
      color="currentColor"
      height="16"
      icon-name="lightbulb"
      role="img"
      width="16"
    />
    <span>
      <strong
        class="c3"
        id="uuid1_title"
      >
        discovery
      </strong>
      Test content
    </span>
  </div>
  <div
    class="c4"
  >
    <button
      class="c5 c6 c7"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c5 c8 "
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (desktop, neutral) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c6[aria-disabled='true'] {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c8:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c8[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #60666E;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: var(--spacing-half) var(--spacing-1halfx) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1x);
}

.c3 {
  display: block;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: unset;
}

.c4 > button {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

.c7 {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c7:hover {
  border-color: rgb(255 255 255 / 0.5);
  color: rgb(255 255 255 / 0.5);
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1_title"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="neutral"
      class="c2"
      color="currentColor"
      height="16"
      icon-name="info"
      role="img"
      width="16"
    />
    <span>
      <strong
        class="c3"
        id="uuid1_title"
      >
        neutral
      </strong>
      Test content
    </span>
  </div>
  <div
    class="c4"
  >
    <button
      class="c5 c6 c7"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c5 c8 "
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (desktop, warning) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c6[aria-disabled='true'] {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c8:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c8[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F5A200;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: var(--spacing-half) var(--spacing-1halfx) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1x);
}

.c3 {
  display: block;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: unset;
}

.c4 > button {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

.c7 {
  border-color: #1B1C1E;
  color: #1B1C1E;
}

.c7:hover {
  border-color: rgb(0 0 0 / 0.6);
  color: rgb(0 0 0 / 0.6);
}

.c9 {
  color: #1B1C1E;
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1_title"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="warning"
      class="c2"
      color="currentColor"
      height="16"
      icon-name="alert-triangle"
      role="img"
      width="16"
    />
    <span>
      <strong
        class="c3"
        id="uuid1_title"
      >
        warning
      </strong>
      Test content
    </span>
  </div>
  <div
    class="c4"
  >
    <button
      class="c5 c6 c7"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c5 c8 c9"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, alert) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c6 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c6[aria-disabled='true'] {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CD2C23;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1halfx);
  margin: var(--spacing-half) var(--spacing-1halfx) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1halfx);
}

.c3 {
  display: block;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 > button {
  margin-left: 0;
  margin-top: var(--spacing-1x);
}

.c7 {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c7:hover {
  border-color: rgb(255 255 255 / 0.5);
  color: rgb(255 255 255 / 0.5);
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1_title"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="alert"
      class="c2"
      color="currentColor"
      height="24"
      icon-name="alert-octagon"
      role="img"
      width="24"
    />
    <span>
      <strong
        class="c3"
        id="uuid1_title"
      >
        alert
      </strong>
      Test content
    </span>
  </div>
  <div
    class="c4"
  >
    <button
      class="c5 c6 c7"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, discovery) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c6 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c6[aria-disabled='true'] {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c8:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c8[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #602FA0;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1halfx);
  margin: var(--spacing-half) var(--spacing-1halfx) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1halfx);
}

.c3 {
  display: block;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 > button {
  margin-left: 0;
  margin-top: var(--spacing-1x);
}

.c7 {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c7:hover {
  border-color: rgb(255 255 255 / 0.5);
  color: rgb(255 255 255 / 0.5);
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1_title"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="discovery"
      class="c2"
      color="currentColor"
      height="24"
      icon-name="lightbulb"
      role="img"
      width="24"
    />
    <span>
      <strong
        class="c3"
        id="uuid1_title"
      >
        discovery
      </strong>
      Test content
    </span>
  </div>
  <div
    class="c4"
  >
    <button
      class="c5 c6 c7"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c5 c8 "
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, neutral) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c6 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c6[aria-disabled='true'] {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c8:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.5);
  border-color: transparent;
  color: #FFFFFF;
}

.c8[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #60666E;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1halfx);
  margin: var(--spacing-half) var(--spacing-1halfx) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1halfx);
}

.c3 {
  display: block;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 > button {
  margin-left: 0;
  margin-top: var(--spacing-1x);
}

.c7 {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c7:hover {
  border-color: rgb(255 255 255 / 0.5);
  color: rgb(255 255 255 / 0.5);
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1_title"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="neutral"
      class="c2"
      color="currentColor"
      height="24"
      icon-name="info"
      role="img"
      width="24"
    />
    <span>
      <strong
        class="c3"
        id="uuid1_title"
      >
        neutral
      </strong>
      Test content
    </span>
  </div>
  <div
    class="c4"
  >
    <button
      class="c5 c6 c7"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c5 c8 "
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, warning) 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c5 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c6 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c6[aria-disabled='true'] {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c8:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c8[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F5A200;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1halfx);
  margin: var(--spacing-half) var(--spacing-1halfx) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1halfx);
}

.c3 {
  display: block;
  font-size: 1rem;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c4 > button {
  margin-left: 0;
  margin-top: var(--spacing-1x);
}

.c7 {
  border-color: #1B1C1E;
  color: #1B1C1E;
}

.c7:hover {
  border-color: rgb(0 0 0 / 0.6);
  color: rgb(0 0 0 / 0.6);
}

.c9 {
  color: #1B1C1E;
}

<section
  aria-atomic="true"
  aria-labelledby="uuid1_title"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="warning"
      class="c2"
      color="currentColor"
      height="24"
      icon-name="alert-triangle"
      role="img"
      width="24"
    />
    <span>
      <strong
        class="c3"
        id="uuid1_title"
      >
        warning
      </strong>
      Test content
    </span>
  </div>
  <div
    class="c4"
  >
    <button
      class="c5 c6 c7"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c5 c8 c9"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;
